packages/cashc/test/compiler/ParseError/function_with_type_name.cash
contract Test(int x, string y) {
    return {
        bytes(sig s, pubkey pk) {
        }
    }
}
